--- a/myproject/flaskr/templates/layout.html
+++ b/myproject/flaskr/templates/layout.html
@@ -50,6 +50,7 @@
             </div>
         </nav>
 
+        <!--what is this for?-->
         {% if get_flashed_messages() %}
             <header>
                 <div class="alert alert-primary mb-0 text-center" role="alert">
