Wed, Dec 8, 2021, 8:27 PM +00:00

--- a/myproject/flaskr/templates/hello.html
+++ b/myproject/flaskr/templates/hello.html
@@ -11,6 +11,6 @@
     <p>Don’t say things you wouldn’t want to hear being said to you. </p>
     <p>Don’t post content that you know will get you/anyone else into legal trouble. </p>
     <p>If you think you might need professional mental health support, please click <a href="https://yalehealth.yale.edu/directory/departments/mental-health-counseling">here.</a></p>
-    <button type="button" class="btn btn-outline-primary" href="index.html">Click here if you are ready to enter Yale Tree Hole. </button>
+    <button type="button" class="btn btn-outline-primary" href="login.html">Click here if you are ready to enter Yale Tree Hole. </button>
 </div>
 {% endblock %}
