--- a/myproject/flaskr/templates/index.html
+++ b/myproject/flaskr/templates/index.html
@@ -12,3 +12,14 @@
 
 
 {% endblock %}
+{% extends "layout.html" %}
+
+{% block title %}
+    Posts
+{% endblock %}
+
+{% block main %}
+<div class="col-md-10 col-lg-8 col-xl-7">
+
+</div>
+{% endblock %}
