Wed, Dec 8, 2021, 8:49 PM +00:00

--- a/myproject/static/style.css
+++ b/myproject/static/style.css
@@ -41,4 +41,12 @@ nav .navbar-brand .green
     color: #0085A1;
     border-color: #0085A1;
   }
-  
+
+
+  .container{
+    width: 100%;
+    padding-right: var(--bs-gutter-x, 0.75rem);
+    padding-left: var(--bs-gutter-x, 0.75rem);
+    margin-right: auto;
+    margin-left: auto;
+  }
