--- a/myproject/flaskr/templates/index.html
+++ b/myproject/flaskr/templates/index.html
@@ -7,19 +7,14 @@
 {% block main %}
 
 <!-- Display Blog posts -->
-<div class="container px-4 px-lg-5">
-    <div class="row gx-4 gx-lg-5 justify-content-center">
-        <div class="col-md-10 col-lg-8 col-xl-7">
+<div class="container">
             <!-- Post preview-->
             <div class="post-preview">
                 <a href="post.html">
-                    <h2 class="post-title">Man must explore, and this is exploration at its greatest</h2>
-                    <h3 class="post-subtitle">Problems look mighty small from 150 miles up</h3>
+                    <h2 class="post-title">(Titile of first post)</h2>
                 </a>
                 <p class="post-meta">
-                    Posted by
-                    <a href="#!">Start Bootstrap</a>
-                    on September 24, 2021
+                    Posted on (date)
                 </p>
             </div>
             <!-- Divider-->
