--- a/myproject/flaskr/templates/index.html
+++ b/myproject/flaskr/templates/index.html
@@ -11,14 +11,14 @@
             <!-- Post preview-->
             <div class="post-preview">
                 <a href="post.html">
-                    <h2 class="post-title">(Titile of first post)</h2>
+                    <h2 class="post-title">(Titile of 1st post)</h2>
                 </a>
                 <p class="post-meta">
                     Posted on (date)
                 </p>
             </div>
             <!-- Divider-->
-            <hr class="my-4" />
+            <hr>
             <!-- Post preview-->
             <div class="post-preview">
                 <a href="post.html"><h2 class="post-title">I believe every human has a finite number of heartbeats. I don't intend to waste any of mine.</h2></a>
