--- a/myproject/flaskr/templates/index.html
+++ b/myproject/flaskr/templates/index.html
@@ -8,7 +8,7 @@
 
 <!-- Display Blog posts -->
 <div class="container">
-            <!-- Post preview-->
+            <!-- Post preview 1-->
             <div class="post-preview">
                 <a href="post.html">
                     <h2 class="post-title">(Titile of 1st post)</h2>
@@ -19,13 +19,13 @@
             </div>
             <!-- Divider-->
             <hr>
-            <!-- Post preview-->
+            <!-- Post preview 2-->
             <div class="post-preview">
-                <a href="post.html"><h2 class="post-title">I believe every human has a finite number of heartbeats. I don't intend to waste any of mine.</h2></a>
+                <a href="post.html">
+                    <h2 class="post-title">(Titile of 2nd post)</h2>
+                </a>
                 <p class="post-meta">
-                    Posted by
-                    <a href="#!">Start Bootstrap</a>
-                    on September 18, 2021
+                    Posted on (date)
                 </p>
             </div>
 
