Wed, Dec 8, 2021, 9:25 PM +00:00

--- a/myproject/flaskr/templates/seekhelp.html
+++ b/myproject/flaskr/templates/seekhelp.html
@@ -6,6 +6,9 @@
 
 {% block main %}
 
-
+<p> You can find more professional support here.</p>
+<a href="https://yalehealth.yale.edu/directory/departments/mental-health-counseling">Yale Mental Health & Counseling</a>
+<a href="https://yalecollege.yale.edu/getting-help/yale-college-community-care">Yale College Community Care</a>
+<a href="https://walden.sites.yale.edu/">Walden Peer Counseling </a>
 
 {% endblock %}
