--- a/myproject/flaskr/templates/post.html
+++ b/myproject/flaskr/templates/post.html
@@ -6,7 +6,12 @@
 
 {% block main %}
 
+<h2>What's on your mind today? </h2>
 
+<form>
+  <input type="text"><br><br>
+  <input type="submit" value="Submit">
+</form>
 
 
 {% endblock %}
