--- a/myproject/flaskr/templates/hello.html
+++ b/myproject/flaskr/templates/hello.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main %}
-<div class="col-md-10 col-lg-8 col-xl-7">
+<div>
     <p>This is an open forum without memories. Anything you post or respond to here will be automatically deleted after three days.</p>
     <p>We hope you will feel safe to speak your mind here - those thoughts and ambiguities you somehow can’t really share with friends and family. We hope you find here a place of comfort and a source of support. This means we will need YOU to help create that environment for everyone. So, we ask you to exercise your common sense when posting/replying, specifically:</p>
     <p>Don’t say things you wouldn’t want to hear being said to you. </p>
