--- a/project/templates/history.html
+++ b/project/templates/history.html
@@ -8,14 +8,14 @@
     <table class="table tablestriped">
         <thead>
             <tr>
-                <th class="text-start">Symbol</th>
-                <th class="text-start">Shares</th>
-                <th class="text-end">Price</th>
+                <th class="text-start">Title</th>
+                <th class="text-start">Post</th>
+                <th class="text-end">Created</th>
                 <th class="text-end">Transacted</th>
             </tr>
         </thead>
        <tbody>
-            {% for row in transactions %}
+            {% for row in post %}
                 <tr>
                     <td class="text-start">{{row.symbol}}</td>
                     <td class="text-start">{{row.shares}}</td>
