--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -1,40 +1,32 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Index
+    Home
 {% endblock %}
 
 {% block main %}
-    <table class="table tablestriped">
-        <thead>
-            <tr>
-                <th class="text-start">Symbol</th>
-                <th class="text-start">Name</th>
-                <th class="text-end">Shares</th>
-                <th class="text-end">Price</th>
-                <th class="text-end">TOTAL</th>
-            </tr>
-        </thead>
-       <tbody>
-            {% for row in stocks %}
-                <tr>
-                    <td class="text-start">{{row.symbol}}</td>
-                    <td class="text-start">{{row.name}}</td>
-                    <td class="text-end">{{row.shares}}</td>
-                    <td class="text-end">{{row.price}}</td>
-                    <td class="text-end">{{displayed_total}}</td>
-                </tr>
-            {% endfor %}
-        </tbody>
-        <tfoot>
-            <tr>
-                <td class="border-0 fw-bold text-end" colspan="4">Cash</td>
-                <td class="border-0 text-end">{{cash}}</td>
-            </tr>
-            <tr>
-                <td class="border-0 fw-bold text-end" colspan="4">TOTAL</td>
-                <td class="border-0 w-bold text-end">${{net_total}}</td>
-            </tr>
-        </tfoot>
-    </table>
+
+<!-- Display Blog posts -->
+<div class="container">
+            <!-- Post preview 1-->
+            <div class="post-preview">
+                <a href="post.html">
+                    <h2 class="post-title">(Titile of 1st post)</h2>
+                </a>
+                <p class="post-meta">
+                    Posted on (date)
+                </p>
+            </div>
+            <!-- Divider-->
+            <hr>
+            <!-- Post preview 2-->
+            <div class="post-preview">
+                <a href="post.html">
+                    <h2 class="post-title">(Titile of 2nd post)</h2>
+                </a>
+                <p class="post-meta">
+                    Posted on (date)
+                </p>
+            </div>
+
 {% endblock %}
