--- a/project/templates/post.html
+++ b/project/templates/post.html
@@ -8,9 +8,17 @@
 
 <h2>What's on your mind today? </h2>
 
-<form>
-  <input type="text"><br><br>
-  <input type="submit" value="Submit">
+<form action="/post" method="post">
+    <div class="mb-3">
+        <input class="form-control mx-auto w-auto" id="password" name="original_password" placeholder="Original Password" type="password">
+    </div>
+    <div class="mb-3">
+        <input class="form-control mx-auto w-auto" id="password" name="new_password" placeholder="New Password" type="password">
+    </div>
+    <div class="mb-3">
+        <input class="form-control mx-auto w-auto" id="password" name="new_password1" placeholder="New Password (again)" type="password">
+    </div>
+    <button class="btn btn-primary" type="submit">Reset</button>
 </form>
 
 
