Wed, Dec 8, 2021, 11:42 PM +00:00

--- a/project/templates/post.html
+++ b/project/templates/post.html
@@ -10,13 +10,10 @@
 
 <form action="/post" method="post">
     <div class="mb-3">
-        <input class="form-control mx-auto w-auto" id="password" name="original_password" placeholder="Original Password" type="password">
+        <input class="form-control mx-auto w-auto" name="title" placeholder="title">
     </div>
     <div class="mb-3">
-        <input class="form-control mx-auto w-auto" id="password" name="new_password" placeholder="New Password" type="password">
-    </div>
-    <div class="mb-3">
-        <input class="form-control mx-auto w-auto" id="password" name="new_password1" placeholder="New Password (again)" type="password">
+        <input class="form-control mx-auto w-auto" name="body" placeholder="What's on your mind today?">
     </div>
     <button class="btn btn-primary" type="submit">Reset</button>
 </form>
