--- a/project/templates/layout.html
+++ b/project/templates/layout.html
@@ -34,7 +34,7 @@
                             <li class="nav-item"><a class="nav-link" href="/index">Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="/post">Say Something</a></li>
                             <li class="nav-item"><a class="nav-link" href="/seekhelp">Seek Help</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/hello">About</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/">About</a></li>
                         </ul>
                         <ul class="navbar-nav ms-auto mt-2">
                             <li class="nav-item"><a class="nav-link" href="/reset_password">Reset Password</a></li>
