Thu, Dec 9, 2021, 12:03 AM +00:00

--- a/project/templates/post.html
+++ b/project/templates/post.html
@@ -15,7 +15,7 @@
     <div class="mb-3">
         <input class="form-control mx-auto w-auto" name="body" placeholder="What's on your mind today?">
     </div>
-    <button class="btn btn-primary" type="submit">Reset</button>
+    <button class="btn btn-primary" type="submit">Post</button>
 </form>
 
 
