Thu, Dec 9, 2021, 12:42 AM +00:00

--- a/FINAL_project/templates/index.html
+++ b/FINAL_project/templates/index.html
@@ -16,6 +16,12 @@
                 <p class="post-meta">
                     Posted on (date)
                 </p>
+                <form action="/post" method="post">
+                    <div class="mb-3">
+                        <input class="form-control mx-auto w-auto" name="reply" placeholder="reply">
+                    </div>
+                    <button class="btn btn-primary" type="submit">Post</button>
+                </form>
             </div>
             <!-- Divider-->
             <hr>
