Thu, Dec 9, 2021, 12:48 AM +00:00

--- a/FINAL_project/templates/index.html
+++ b/FINAL_project/templates/index.html
@@ -10,9 +10,8 @@
 <div class="container">
             <!-- Post preview 1-->
             <div class="post-preview">
-                <a href="post.html">
-                    <h2 class="post-title">(Titile of 1st post)</h2>
-                </a>
+                <h2 class="post-title">(Titile of 1st post)</h2>
+                <p class="post-content">(content of 1st post)</p>
                 <p class="post-meta">
                     Posted on (date)
                 </p>
