--- a/FINAL_project/templates/index.html
+++ b/FINAL_project/templates/index.html
@@ -8,7 +8,11 @@
 
 <!-- Display Blog posts -->
 <div class="container">
+
+
+
             <!-- Post preview 1-->
+            {% for my_item in my_collection %}
             <div class="post-preview">
                 <h2 class="post-title">(Titile of 1st post)</h2>
                 <p class="post-content">(content of 1st post)</p>
@@ -24,14 +28,7 @@
             </div>
             <!-- Divider-->
             <hr>
-            <!-- Post preview 2-->
-            <div class="post-preview">
-                <a href="post.html">
-                    <h2 class="post-title">(Titile of 2nd post)</h2>
-                </a>
-                <p class="post-meta">
-                    Posted on (date)
-                </p>
-            </div>
+            {% endfor %}
+
 
 {% endblock %}
