Thu, Dec 9, 2021, 1:04 AM +00:00

--- a/FINAL_project/templates/index.html
+++ b/FINAL_project/templates/index.html
@@ -13,22 +13,22 @@
 
             <!-- Post preview 1-->
             {% for my_item in my_collection %}
-            {{ }}
-            <div class="post-preview">
-                <h2 class="post-title">(Titile of 1st post)</h2>
-                <p class="post-content">(content of 1st post)</p>
-                <p class="post-meta">
-                    Posted on (date)
-                </p>
-                <form action="/post" method="post">
-                    <div class="mb-3">
-                        <input class="form-control mx-auto w-auto" name="reply" placeholder="reply">
-                    </div>
-                    <button class="btn btn-primary" type="submit">Post</button>
-                </form>
-            </div>
-            <!-- Divider-->
-            <hr>
+                {{ my_item.___}}
+                <div class="post-preview">
+                    <h2 class="post-title">(Titile of 1st post)</h2>
+                    <p class="post-content">(content of 1st post)</p>
+                    <p class="post-meta">
+                        Posted on (date)
+                    </p>
+                    <form action="/post" method="post">
+                        <div class="mb-3">
+                            <input class="form-control mx-auto w-auto" name="reply" placeholder="reply">
+                        </div>
+                        <button class="btn btn-primary" type="submit">Post</button>
+                    </form>
+                </div>
+                <!-- Divider-->
+                <hr>
             {% endfor %}
 
 
