Thu, Dec 9, 2021, 1:23 AM +00:00

--- a/FINAL_project/templates/post.html
+++ b/FINAL_project/templates/post.html
@@ -10,10 +10,10 @@
 
 <form action="/post" method="post">
     <div class="mb-3">
-        <input class="form-control mx-auto w-auto" name="title" placeholder="title">
+        <input class="form-control mx-auto w-auto" name="title" id="title" placeholder="title">
     </div>
     <div class="mb-3">
-        <input class="form-control mx-auto w-auto" name="body" placeholder="What's on your mind today?">
+        <input class="form-control mx-auto w-auto" name="body" id="post" placeholder="What's on your mind today?">
     </div>
     <button class="btn btn-primary" type="submit">Post</button>
 </form>
