--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -37,8 +37,8 @@
                 <h2 class="post-title">{{post.title}}</h2>
             </a>
             <p class="post-body">{{post.body}}</p>
-            <p class="post-meta">{{post.timestamp}}</p>
+            <p class="post-meta">{{post.created}}</p>
         </div>
     {% endfor %}
-    
+
 {% endblock %}
