Thu, Dec 9, 2021, 10:08 PM +00:00

--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -33,12 +33,11 @@
     <div class="container">
     <!-- Post preview 1-->
         <div class="post-preview">
-            <a href="post.html">
-                <h2 class="post-title">{{post.title}}</h2>
-            </a>
+            <h2 class="post-title">{{post.title}}</h2>
             <p class="post-body">{{post.body}}</p>
             <p class="post-meta">{{post.created}}</p>
         </div>
+    </div>
     {% endfor %}
 
 {% endblock %}
