Thu, Dec 9, 2021, 10:09 PM +00:00

--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -33,9 +33,9 @@
     <div class="container">
     <!-- Post preview 1-->
         <div class="post-preview">
-            <h2 class="post-title">{{post.title}}</h2>
-            <p class="post-body">{{post.body}}</p>
-            <p class="post-meta">{{post.created}}</p>
+            <h2 class="post-title">{{row.title}}</h2>
+            <p class="post-body">{{row.body}}</p>
+            <p class="post-meta">{{row.created}}</p>
         </div>
     </div>
     {% endfor %}
