Thu, Dec 9, 2021, 10:25 PM +00:00

--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -37,6 +37,7 @@
         </tr>
     </thead>
     {% for row in post %}
+    <tbody>
         <div class="container">
             <!-- Post preview 1-->
             <div class="post-preview">
@@ -47,7 +48,7 @@
                 </tr>
             </div>
         </div>
-    {% endfor %}
     </tbody>
+    {% endfor %}
 
 {% endblock %}
