--- a/FINAL_project/templates/index.html
+++ b/FINAL_project/templates/index.html
@@ -7,26 +7,29 @@
 {% block main %}
 
 <!-- Display Blog posts -->
-<div class="container">
-    <table class="table tablestriped">
-        <thead>
-            <tr>
-                <th class="text-start">Title</th>
-                <th class="text-start">Post</th>
-                <th class="text-end">Created on</th>
-            </tr>
-        </thead>
        <tbody>
-        {% for row in post %}
-<table class="table tablestriped">
-    <thead>
-        <tr>
-            <th class="text-start">Title</th>
-            <th class="text-start">Post</th>
-            <th class="text-end">Created on</th>
-        </tr>
-    </thead>
     {% for row in post %}
-
+    <div class="container">
+    <!-- Post preview 1-->
+        <div class="post-preview">
+            <tr>
+                <td class="text-start">{{row.title}}</td>
+                <td class="text-start">{{row.post}}</td>
+                <td class="text-end">{{row.created}}</td>
+            </tr>
+        {% for row in post %}
+        <div class="container">
+        <!-- Post preview 1-->
+            <div class="post-preview">
+                <tr>
+                    <td class="text-start">{{row.title}}</td>
+                    <td class="text-start">{{row.post}}</td>
+                    <td class="text-end">{{row.created}}</td>
+                </tr>
+            </div>
+        </div>
+    </div>
+    </tbody>
+    {% endfor %}
 
 {% endblock %}
