Thu, Dec 9, 2021, 10:46 PM +00:00

--- a/FINAL_project/templates/index.html
+++ b/FINAL_project/templates/index.html
@@ -7,19 +7,18 @@
 {% block main %}
 
 <!-- Display Blog posts -->
-       <tbody>
+<!-- Post preview 1-->
+<table class="table tablestriped">
+    <thead>
+        <tr>
+            <th class="text-start">Title</th>
+            <th class="text-start">Post</th>
+            <th class="text-end">Created on</th>
+        </tr>
+    </thead>
+    <tbody>
     {% for row in post %}
-    <div class="container">
-    <!-- Post preview 1-->
-        <div class="post-preview">
-            <tr>
-                <td class="text-start">{{row.title}}</td>
-                <td class="text-start">{{row.post}}</td>
-                <td class="text-end">{{row.created}}</td>
-            </tr>
-        {% for row in post %}
         <div class="container">
-        <!-- Post preview 1-->
             <div class="post-preview">
                 <tr>
                     <td class="text-start">{{row.title}}</td>
@@ -28,8 +27,7 @@
                 </tr>
             </div>
         </div>
-    </div>
-    </tbody>
     {% endfor %}
+    </tbody>
 
 {% endblock %}
