--- a/FINAL_project/templates/index.html
+++ b/FINAL_project/templates/index.html
@@ -22,7 +22,7 @@
             <div class="post-preview">
                 <tr>
                     <td class="text-start">{{row.title}}</td>
-                    <td class="text-start">{{row.post}}</td>
+                    <td class="text-start">{{row.body}}</td>
                     <td class="text-end">{{row.created}}</td>
                 </tr>
             </div>
