--- a/FINAL_project/templates/index.html
+++ b/FINAL_project/templates/index.html
@@ -25,7 +25,7 @@
                 <tr>
                     <td class="text-start">{{row.title}}</td>
                     <td class="text-start">{{row.body}}</td>
-                    <td class="text-start">comment here</td>
+                    <td class="text-start">{{post.comment}}</td>
                     <td class="text-start">
                         <form action="/post" method="post">
                             <div class="mb-3">
