--- a/FINAL_project/templates/index.html
+++ b/FINAL_project/templates/index.html
@@ -27,7 +27,7 @@
                     <td class="text-start">{{row.body}}</td>
                     <td class="text-start">
                     {% for comment in comments %} <!--how to get the post linked with the post-->
-                        comment displayed
+                        {{comment.content}}}
                     {% endfor %}
                     </td>
                     <td class="text-start">
