--- a/FINAL_project/templates/index.html
+++ b/FINAL_project/templates/index.html
@@ -31,7 +31,7 @@
                     {% endfor %}
                     </td>
                     <td class="text-start">
-                        <form action="/post" method="post">
+                        <form action="/comment" method="post">
                             <div class="mb-3">
                                 <input class="form-control mx-auto w-auto" name="reply" id="reply" placeholder="reply">
                             </div>
