--- a/FINAL_project/templates/index.html
+++ b/FINAL_project/templates/index.html
@@ -26,7 +26,7 @@
                     <td class="text-start">{{row.title}}</td>
                     <td class="text-start">{{row.body}}</td>
                     <td class="text-start">
-                    {% for comment in comments %} <!--how to get the post linked with the post-->
+                    {% for comment in comments %} <!--how to get the comment linked with the post-->
                         {{comment.content}}}
                     {% endfor %}
                     </td>
