Fri, Dec 10, 2021, 1:30 AM +00:00

--- a/FINAL_project/templates/index.html
+++ b/FINAL_project/templates/index.html
@@ -11,6 +11,7 @@
 <table class="table tablestriped">
     <thead>
         <tr>
+            <th class="text-start">ID</th>
             <th class="text-start">Title</th>
             <th class="text-start">Post</th>
             <th class="text-start">Comment</th>
@@ -23,6 +24,7 @@
         <div class="container">
             <div class="post-preview">
                 <tr>
+                    <td class="text-start">{{row.post_id}}</td>
                     <td class="text-start">{{row.title}}</td>
                     <td class="text-start">{{row.body}}</td>
                     <td class="text-start">
