Fri, Dec 10, 2021, 1:47 AM +00:00

--- a/FINAL_project/templates/index.html
+++ b/FINAL_project/templates/index.html
@@ -29,7 +29,7 @@
                     <td class="text-start">{{row.body}}</td>
                     <td class="text-start">
                     {% for comment in comments %} <!--how to get the comment linked with the post-->
-                        {{comment.content}}}
+                        {{comment.}}}
                     {% endfor %}
                     </td>
                     <td class="text-start">
