--- a/FINAL_project/templates/index.html
+++ b/FINAL_project/templates/index.html
@@ -28,9 +28,9 @@
                     <td class="text-start">{{row.title}}</td>
                     <td class="text-start">{{row.body}}</td>
                     <td class="text-start">
-                    {% if comments.post_id == row.post_id %}
-                        {% for comment in comments %}
-                            <td>{{comments.content}}</td>
+                    {% if comment.post_id == row.post_id %}
+                        {% for each in comment %}
+                            <td>{{each.content}}</td>
                         {% endfor %}
                     {% endif %}
                     </td>
