--- a/FINAL_project/templates/index.html
+++ b/FINAL_project/templates/index.html
@@ -28,11 +28,11 @@
                     <td class="text-start">{{row.title}}</td>
                     <td class="text-start">{{row.body}}</td>
                     <td class="text-start">
-                    {% if comment.post_id == row.post_id %}
-                        {% for each in comment %}
-                            <td>{{each.content}}</td>
-                        {% endfor %}
-                    {% endif %}
+                    {% for each in comment %}
+                        {% if each.post_id == row.post_id %}
+                            <td class="text-start">{{each.content}}</td>
+                        {% endif %}
+                    {% endfor %}
                     </td>
                     <td class="text-start">
                         <form action="/comment" method="post">
