--- a/FINAL_project/templates/index.html
+++ b/FINAL_project/templates/index.html
@@ -39,7 +39,8 @@
                             <div class="mb-3">
                                 <input class="form-control mx-auto w-auto" name="reply" id="reply" placeholder="reply">
                             </div>
-                            <button class="btn btn-primary" type="submit">Reply</button>
+                            {# <button class="btn btn-primary" type="submit">Reply</button> #}
+                            <input type="submit" name={{row.post_id}}>
                         </form>
                     </td>
                     <td class="text-end">{{row.created}}</td>
