Fri, Dec 10, 2021, 3:31 AM +00:00

--- a/FINAL_project/templates/index.html
+++ b/FINAL_project/templates/index.html
@@ -40,7 +40,7 @@
                                 <input class="form-control mx-auto w-auto" name="reply" id="reply" placeholder="reply">
                             </div>
                             {# <button class="btn btn-primary" type="submit">Reply</button> #}
-                                <input type="submit" name={{row.post_id}}>
+                                <button class="btn btn-primary" type="submit" name={{row.post_id}}>Reply</button>
                         </form>
                     </td>
                     <td class="text-end">{{row.created}}</td>
