Fri, Dec 10, 2021, 3:45 AM +00:00

--- a/FINAL_project/templates/layout.html
+++ b/FINAL_project/templates/layout.html
@@ -35,7 +35,7 @@
                             <li class="nav-item"><a class="nav-link" href="/">About</a></li>
                             <li class="nav-item"><a class="nav-link" href="/post">Say Something</a></li>
                             <li class="nav-item"><a class="nav-link" href="/seekhelp">Seek Help</a></li>
-                            <li class="nav-item"><a class="nav-link" href="/history">Your Posts</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/history">My Posts</a></li>
                         </ul>
                         <ul class="navbar-nav ms-auto mt-2">
                             <li class="nav-item"><a class="nav-link" href="/reset_password">Reset Password</a></li>
