Fri, Dec 10, 2021, 3:51 AM +00:00

--- a/FINAL_project/templates/index.html
+++ b/FINAL_project/templates/index.html
@@ -37,7 +37,7 @@
                     <td class="text-start">
                         <form action="/comment" method="post">
                             <div class="mb-3">
-                                <input class="form-control mx-auto w-auto" name="reply" id="reply" placeholder="reply">
+                                <input class="form-control mx-auto w-auto" name="reply" id="reply" placeholder="Leave a comment">
                             </div>
                                 <button class="btn btn-primary" type="submit" name={{row.post_id}}>Reply</button>
                         </form>
