--- a/FINAL_project/templates/index.html
+++ b/FINAL_project/templates/index.html
@@ -45,7 +45,7 @@
                             <div class="input-group mb-3">
                             <input type="text" class="form-control" name="reply" id="reply" placeholder="Leave a comment" aria-describedby="basic-addon2">
                             <div class="input-group-append">
-                                <button class="btn btn-outline-secondary" type="submit" name={{row.post_id}}>Reply</button>
+                                <button class="btn btn-outline-primary" type="submit" name={{row.post_id}}>Reply</button>
                             </div>
                             </div>
                         </form>
