--- a/FINAL_project/templates/history.html
+++ b/FINAL_project/templates/history.html
@@ -23,7 +23,7 @@
                     <td class="text-end">
                         {# delete post function #}
                         <form action="/delete" method="post">
-                            <input type="hidden">
+                            <input type="hidden" name="delete">
                             <button class="btn btn-outline-primary" type="submit" name={{row.post_id}}>Delete Post</button>
                         </form>
                 </tr>
