--- a/FINAL_project/templates/hello.html
+++ b/FINAL_project/templates/hello.html
@@ -11,7 +11,7 @@
     <p>Don’t say things you wouldn’t want to hear being said to you. </p>
     <p>Don’t post content that you know will get you/anyone else into legal trouble. </p>
     <p>If you think you might need professional mental health support, please click <a href="https://yalehealth.yale.edu/directory/departments/mental-health-counseling">here.</a></p>
-    <a href="/login">
+    <a href="/index">
     <button type="button" class="btn btn-outline-primary">Click here if you are ready to enter Yale Tree Hole. </button>
     </a>
 
