Fri, Dec 10, 2021, 10:53 PM +00:00

--- a/FINAL_project/templates/edit.html
+++ b/FINAL_project/templates/edit.html
@@ -8,7 +8,7 @@
 
 <h2>Edit This Post</h2>
 
-<form action="/post" method="post">
+<form action="/edit" method="post">
     <div class="mb-3">
         <input class="form-control mx-auto w-auto" name="title" id="title" placeholder="title">
     </div>
