--- a/FINAL_project/templates/post.html
+++ b/FINAL_project/templates/post.html
@@ -13,6 +13,7 @@
         <input class="form-control mx-auto w-auto" name="title" id="title" placeholder="title">
     </div>
     <div class="mb-3">
+        <textarea class="form-control" rows="3" name="body" id="post" placeholder="What's on your mind today?"></textarea>
         <input class="form-control mx-auto w-auto" name="body" id="post" placeholder="What's on your mind today?">
     </div>
     <button class="btn btn-primary" type="submit">Post</button>
