--- a/FINAL_project/templates/apology.html
+++ b/FINAL_project/templates/apology.html
@@ -6,5 +6,5 @@
 
 {% block main %}
     <!-- https://memegen.link/ -->
-    <img alt="{{ top }}" class="border img-fluid" src="http://memegen.link/custom/{{ top | urlencode }}/{{ bottom | urlencode }}.jpg?alt=https://i.imgur.com/CsCgN7Ll.png&width=400" title="{{ top }}">
+    <img alt="{{ top }}" class="border img-fluid" src="http://memegen.link/custom/{{ top | urlencode }}/{{ bottom | urlencode }}.jpg?alt=https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTKWDaWTaAT-3JS-8mTkumIBHHC78l14TCThw&usqp=CAU&width=400" title="{{ top }}">
 {% endblock %}
