Sat, Dec 11, 2021, 12:55 AM +00:00

--- a/FINAL_project/templates/history.html
+++ b/FINAL_project/templates/history.html
@@ -23,7 +23,7 @@
                         {# delete post function #}
                         <form action="/delete" method="post">
                             <input type="hidden" name="delete">
-                            <button class="btn btn-outline-primary" type="submit" name={{row.post_id}}>Delete Post</button>
+                            <button class="btn btn-outline-primary" type="submit" name={{row.post_id}}>Delete</button>
                         </form>
                     </td>
                     <td class="text-end">
