--- a/FINAL_project/templates/history.html
+++ b/FINAL_project/templates/history.html
@@ -5,8 +5,8 @@
 {% endblock %}
 
 <script>
-function myFunction() {
-  alert("I am an alert box!");
+function deleteAlert() {
+  alert("Your Post and its associated comment has been deleted. ");
 }
 </script>
 
