Sat, Dec 11, 2021, 1:04 AM +00:00

--- a/FINAL_project/templates/history.html
+++ b/FINAL_project/templates/history.html
@@ -30,7 +30,7 @@ function deleteAlert() {
                         {# delete post function #}
                         <form action="/delete" method="post">
                             <input type="hidden" name="delete">
-                            <button class="btn btn-outline-primary" type="submit" name={{row.post_id}} onclick="deleteAlert() data-confirm="Are you sure to delete this item?">Delete</button>
+                            <button class="btn btn-outline-primary" type="submit" name={{row.post_id}} onclick="deleteAlert() onclick="return confirm('Are you sure you want to delete?');">Delete</button>
                         </form>
                     </td>
                     <td class="text-end">
