Sat, Dec 11, 2021, 1:20 AM +00:00

--- a/FINAL_project/templates/seekhelp.html
+++ b/FINAL_project/templates/seekhelp.html
@@ -13,7 +13,7 @@
 <p><a href="https://yalecollege.yale.edu/getting-help/yale-college-community-care">Yale College Community Care</a></p>
 <p><a href="https://walden.sites.yale.edu/">Walden Peer Counseling </a><p>
 
-<img src="images/funny-dog.jpg">
+<img src="seekhelp.jpg">
 
 
 {% endblock %}
