--- a/FINAL_project/templates/edit.html
+++ b/FINAL_project/templates/edit.html
@@ -10,10 +10,10 @@
 
 <form action="/edit" method="post">
     <div class="mb-3">
-        <input class="form-control mx-auto w-auto" name="title" id="title" placeholder="title">
+        <input class="form-control mx-auto w-auto" name="title" id="title" value="previous title">
     </div>
     <div class="mb-3">
-        <input class="form-control mx-auto w-auto" name="body" id="body" placeholder="body">
+        <input class="form-control mx-auto w-auto" name="body" id="body" value="previous body">
     </div>
     <button class="btn btn-primary" type="submit">Update</button>
 </form>
